# headers-gen

./: .pdm-python  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python-test.yml
headers_gen/: __init__.py  exceptions.py  utility.py
headers_gen/accept/: __init__.py  firefox.py
headers_gen/accept_encondig/: __init__.py  chrome.py  firefox.py
headers_gen/browsers/: chrome.py
headers_gen/user_agent/: __init__.py  firefox.py  safari.py
la_headers/: __init__.py  utility.py
la_headers/accept/: __init__.py  chrome.py  firefox.py
la_headers/accept_encondig/: __init__.py  chrome.py
la_headers/browser/: __init__.py
la_headers/browsers/: __init__.py  chrome.py  firefox.py
la_headers/config/: __init__.py  firefox.py
la_headers/operating_system/: __init__.py  android.py
la_headers/options/browser/: __init__.py  brave.py  chrome.py  firefox.py
la_headers/options/operating_system/: __init__.py  android.py
la_headers/prefabs/: __init__.py
la_headers/sec_ch_ua/: __init__.py  chromie.py
la_headers/sec_ch_ua_mobile/: __init__.py  chromie.py  firefox.py
la_headers/sec_ch_ua_platform/: __init__.py  chromie.py  firefox.py
la_headers/sec_gpc/: __init__.py  chrome.py
la_headers/system/: __init__.py  android.py  linux.py  mac.py  windows.py
la_headers/upgrade_insecure_requests/: __init__.py  chrome.py  firefox.py  safari.py
la_headers/user_agent/: __init__.py  chrome.py  firefox.py  safari.py
tests/: test_config.py  test_headers.py  test_random_headers.py  test_system.py
