[project]
name = "la-headers"
version = "0.0.2"
description = "Headers generator"
authors = [
    {name = "thiagola92", email = "thiagola92@gmail.com"}
]
dependencies = ["packaging==21.3"]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}
keywords = ["headers", "request", "browser"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
]

[project.urls]
Homepage = "https://github.com/thiagola92/la-headers"

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[tool.pdm]

[tool.pdm.scripts]
unittest = "python -m unittest discover -v -f -s tests"
black = "python -m black ."
isort = "python -m isort -v --ac ."

[tool.pdm.dev-dependencies]
lint = [
    "black",
    "isort"
]

[tool.isort]
profile = "black"